<resources>
    <string name="app_name">Seguro</string>
    <string name="login_email">Email/Phone</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_signup">Sign up</string>
    <string name="login_new_user">New User?</string>
    <string name="login_about">About</string>
    <string name="login_contact">Contact</string>
    <string name="login_warnings_errors">Warnings/Errors</string>
    <string name="about_title">About</string>
    <string name="mohd_mohtashim_nawaz">Mohd Mohtashim Nawaz</string>
    <string name="vineet_gupta">Vineet Gupta</string>
    <string name="aditya_raj">Aditya Raj</string>
    <string name="team">Team</string>
    <string name="about_fill" formatted="true">
        Seguro is a software solution intended to provide safety while travelling on road.\n
        Crimes and Accidents on roads have been a major problem and is ever increasing. Seguro uses latest data of crimes and accidents happened on roads and uses it to predict the safest possible route from source to destination entered by user.
        It has been built taking care of accuracy and privacy so it proves to be beneficial to everyone.\n
        The solution is an attempt from the students of engineering from Indian Institute of Information College, Allahabad.\n
        We would like to thank our Professors, instructors, seniors and all friends who helped us throughout the journey.
    </string>
    <string name="contact_title">Contact Us</string>
    <string name="email_nawaz">nawazmohtashim.nm@gmail.com</string>
    <string name="email_vineet">vineet.gupta224a@gmail.com</string>
    <string name="phone_nawaz">+919012750239</string>
    <string name="phone_vineet">+919587217849</string>
    <string name="reset_email">Email</string>
    <string name="reset_mobile_number">Mobile Number</string>
    <string name="otp_msg">An OTP will be send to your registered Email/Mobile Number</string>
    <string name="confirm">Confirm</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="reset_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password_title">Reset Password:</string>
    <string name="full_name">Full name</string>
    <string name="fill_the_information_below">Fill the information below:</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="date_of_birth">Date of Birth(DD/MM/YYYY)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_location_setting">Google location settings </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="title_communicate">Communicate</string>
    <string name="title_share">Share</string>
    <string name="title_rate">Rate</string>
    <string name="main_destination">Destination</string>
    <string name="main_source">Source</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
