<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/title_account" />
        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/settings"
            android:title="@string/title_settings" />
    </group>
    <item
        android:id="@+id/menu_communicate"
        android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/title_share" />

            <item
                android:id="@+id/menu_rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/title_rate" />

            <item
                android:id="@+id/menu_contact"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="@string/contact_title" />

            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/about_icon"
                android:title="@string/about_title" />

        </menu>
    </item>
</menu>