<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AboutActivity">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:text="@string/about_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:gravity="fill_horizontal"
                android:text="@string/about_fill"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

            </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:text="@string/team"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal">

        </com.google.android.material.textview.MaterialTextView>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/nawaz"
            app:civ_border_width="3dp"
            app:civ_border_color="#689F38"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/mohd_mohtashim_nawaz"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal">

        </com.google.android.material.textview.MaterialTextView>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/nawaz"
            app:civ_border_width="3dp"
            app:civ_border_color="#689F38"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/vineet_gupta"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal">

        </com.google.android.material.textview.MaterialTextView>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/nawaz"
            app:civ_border_width="3dp"
            app:civ_border_color="#689F38"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/aditya_raj"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal">

        </com.google.android.material.textview.MaterialTextView>

    </LinearLayout>

</ScrollView>
